Back-to-top widget fixed admin call to font-family and icon alignment

--- a/css/back-to-top-back-end-styles.css
+++ b/css/back-to-top-back-end-styles.css
@@ -2,7 +2,7 @@
 @font-face {
 
   font-family: 'Glyphicons Halflings';
-  src:  url('/fonts/glyphicons-halflings-regular.woff') format('woff');
+  src:  url('../fonts/glyphicons-halflings-regular.woff') format('woff');
 }
 
 .glyphicon {
@@ -12,6 +12,7 @@
     text-decoration: inherit;
     font-weight: 400;
     font-style: normal;
+    vertical-align: middle;
 }
 .glyphicon-circle-arrow-up:before {
 
